--- a/vignettes/GenotypeQC_with_plinkQC.Rmd
+++ b/vignettes/GenotypeQC_with_plinkQC.Rmd
@@ -34,21 +34,26 @@ path2plink <- "~/bin"
 ```
 
 ```{r sample QC,  fig.height=8, fig.width=6}
-fail_individuals <- perSampleQC(qcdir=qcdir, alg=alg,
+fail_samples <- perSampleQC(qcdir=qcdir, alg=alg,
                                 #refSamplesFile=refSamplesFile, 
                                 #refColorsFile=refColorsFile,
-                                externalSexID="Bru.Number",
                                 do.check_ancestry=FALSE,
-                                prefixMergedDataset="gencall.sanger12.HapMapIII.pruned.pca",
+                                prefixMergedDataset="data.HapMapIII.pruned.pca",
                                 interactive=TRUE, verbose=TRUE)
 
 ```
 
 ```{r overview sample QC}
-overview <- overviewPerSampleQC(fail_individuals, interactive=TRUE)
+overview_samples <- overviewPerSampleQC(fail_samples, interactive=TRUE)
 ```
 
 ```{r marker QC, fig.height=8, fig.width=6}
 fail_markers <- perMarkerQC(qcdir=qcdir, alg=alg, path2plink=path2plink,
-                            verbose=TRUE, interactive=TRUE)
+                            verbose=TRUE, interactive=TRUE, showPlinkError=TRUE)
 ```
+
+
+```{r overview marker QC}
+overview_marker <- overviewPerMarkerQC(fail_markers, interactive=TRUE)
+```
+
