--- a/README.Rmd
+++ b/README.Rmd
@@ -12,8 +12,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/plinkQC)](https://cran.r-project.org/package=plinkQC)
-
 
 **plinkQC** is a R/CRAN for **genotype quality control** in genetic association
 studies. It makes PLINK basic statistics (e.g.missing genotyping rates
@@ -35,14 +33,14 @@ to retain as many individuals as possible in the study.
 
 ## <i class="fa fa-cog" aria-hidden="true"></i> Getting Started
 
-- The current github version of **plinkQC**  is: 0.1.0 and can be
+The current github version of **plinkQC**  is: 0.1.0 and can be
 installed via
 ```{r ithub install, eval=FALSE}
 library(devtools)
 install_github("HannahVMeyer/PhenotypeSimulator")
 ```
-- **plinkQC** will soon be available on CRAN!
+**plinkQC** will soon be available on CRAN!
 
-- Full documentation is available at http://HannahVMeyer.github.io/plinkQC/
+Full documentation is available at http://HannahVMeyer.github.io/plinkQC/
 
-- A log of version changes can be found [here](https://github.com/HannahVMeyer/plinkQC/blob/master/NEWS.md).
+A log of version changes can be found [here](https://github.com/HannahVMeyer/plinkQC/blob/master/NEWS.md).
