--- a/README.Rmd
+++ b/README.Rmd
@@ -20,9 +20,11 @@ rates per individual, allele frequencies per genetic marker) and relationship
 functions easily accessible from within R and allows for automatic evaluation
 of the results.
 
+Full documentation is available at http://HannahVMeyer.github.io/plinkQC/.
+
 **plinkQC** facilitates an ancestry check for study individuals based on
 comparison to reference datasets. The processing of the reference datasets is
-documented in detail [here](articles/AncestryCheck.html)
+documented in detail [here](articles/AncestryCheck.html).
 
 **plinkQC** generates a per-individual and per-marker quality control report.
 
@@ -41,7 +43,5 @@ library(devtools)
 install_github("HannahVMeyer/PhenotypeSimulator")
 ```
 **plinkQC** will soon be available on CRAN!
-
-Full documentation is available at http://HannahVMeyer.github.io/plinkQC/
 
 A log of version changes can be found [here](https://github.com/HannahVMeyer/plinkQC/blob/master/NEWS.md).
