--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ removed with **plinkQC** to generate a new, clean dataset.
 Removal of individuals based on relationship status via **plinkQC** is optimised
 to retain as many individuals as possible in the study.
 
-## <i class="fa fa-cog" aria-hidden="true"></i> Getting Started
+## <i class="fa fa-rocket" aria-hidden="true"></i> Installation
 
 The current github version of **plinkQC**  is: 0.1.0 and can be
 installed via
