--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ The current github version of **plinkQC**  is: 0.1.0 and can be
 installed via
 ```{r ithub install, eval=FALSE}
 library(devtools)
-install_github("HannahVMeyer/PhenotypeSimulator")
+install_github("HannahVMeyer/plinkQC")
 ```
 **plinkQC** will soon be available on CRAN!
 
