Update links; include ref to plink v2 in 1000 genomes vignette

--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -15,20 +15,22 @@ knitr::opts_chunk$set(
 
 ## <i class="fa fa-map" aria-hidden="true"></i> plinkQC
 
-**plinkQC** is a R/CRAN package for **genotype quality control** in genetic association
-studies. It makes PLINK basic statistics (e.g.missing genotyping rates
-per individual, allele frequencies per genetic marker) and relationship
+**plinkQC** is a R/CRAN package for **genotype quality control** in genetic
+association studies. It makes PLINK basic statistics (e.g.missing genotyping
+rates per individual, allele frequencies per genetic marker) and relationship
 functions easily accessible from within R and allows for automatic evaluation
 of the results.
 
-**plinkQC** facilitates an ancestry check for study individuals based on 
-comparison to reference datasets. The processing of the reference datasets is
-documented in detail [here](articles/AncestryCheck.html).
-
 **plinkQC** generates a per-individual and per-marker quality control report.
+A step-by-step guide on how to run these analyses can be found [here](https://hannahvmeyer.github.io/plinkQC/articles/plinkQC.html).
+
 Individuals and markers that fail the quality control can subsequently be
-removed with **plinkQC** to generate a new, clean dataset. A detailed,
-step-by-step documentation is provided [here](articles/plinkQC.html).
+removed with **plinkQC** to generate a new, clean dataset.
+
+**plinkQC** facilitates an ancestry check for study individuals based on
+comparison to reference datasets. The processing of the reference datasets is
+documented in detail
+[here](https://hannahvmeyer.github.io/plinkQC/articles/AncestryCheck.html).
 
 Removal of individuals based on relationship status via **plinkQC** is optimised
 to retain as many individuals as possible in the study.
