--- a/vignettes/AncestryCheck.Rmd
+++ b/vignettes/AncestryCheck.Rmd
@@ -42,10 +42,10 @@ is provided with $plinkQC$ in `file.path(find.package('plinkQC'),'extdata')`.
 A suitable reference dataset should be downloaded and if necessary, re-formated
 into PLINK format. Vignettes
 ['Processing HapMap III reference data for ancestry estimation'](https://hannahvmeyer.github.io/plinkQC/articles/HapMap.html) and 
-['Processing 1000Genomes  reference data for ancestry estimation'](), show the
-download and processing of the HapMap phase III and 1000Genomes phase III
-dataset, respectively. In this example, we will use the HammapIII data as the
-reference dataset.
+['Processing 1000Genomes  reference data for ancestry estimation'](https://hannahvmeyer.github.io/plinkQC/articles/1000Genomes.html),
+show the download and processing of the HapMap phase III and 1000Genomes phase
+III dataset, respectively. In this example, we will use the HammapIII data as
+the reference dataset.
 
 ## Set-up
 We will first set up some bash variables and create directories needed; storing
