--- a/vignettes/plinkQC.Rmd
+++ b/vignettes/plinkQC.Rmd
@@ -94,8 +94,9 @@ new dataset. In addition, the functionality of each of the functions underlying
 
 ```{r set parameters}
 package.dir <- find.package('plinkQC')
-qcdir <- file.path(package.dir, 'extdata')
-alg <- 'data'
+indir <- file.path(package.dir, 'extdata')
+qcdir <- tempdir()
+name <- 'data'
 path2plink <- "~/bin"
 ```
 
@@ -117,27 +118,35 @@ multi-panel plot. NB: To reduce the data size of the example data in plinkQC,
 data.genome  has already been reduced to the individuals that are related. Thus
 the relatedness plots in C only show counts for related individuals.
 
-```{r individual QC,  fig.height=12, fig.width=9}
-fail_individuals <- perIndividualQC(qcdir=qcdir, alg=alg,
-                            refSamplesFile=paste(qcdir, "/HapMap_ID2Pop.txt",
+```{r individual QC,  eval=FALSE, fig.height=12, fig.width=9}
+fail_individuals <- perIndividualQC(indir=indir, qcdir=qcdir, name=name,
+                            refSamplesFile=paste(indir, "/HapMap_ID2Pop.txt",
                                                  sep=""), 
-                            refColorsFile=paste(qcdir, "/HapMap_PopColors.txt",
+                            refColorsFile=paste(indir, "/HapMap_PopColors.txt",
                                                  sep=""),
                             prefixMergedDataset="data.HapMapIII",
-                            interactive=TRUE, verbose=TRUE,
-                            do.run_check_het_and_miss=FALSE,
-                            do.run_check_sex=FALSE,
-                            do.run_check_relatedness=FALSE,
-                            do.run_check_ancestry=FALSE)
+                            path2plink=path2plink, do.run_check_ancestry = FALSE,
+                            interactive=TRUE, verbose=TRUE)
 
 ```
+```{r load individualQC, echo=FALSE, fig.height=12, fig.width=9, fig.align='center'}
+par(mfrow=c(2,1), las=1)
+knitr::include_graphics("individualQC.pdf")
+```
+
 
 `overviewperIndividualQC` depicts overview plots of quality control failures and
 the intersection of quality control failures with ancestry exclusion.
-```{r overview individual QC}
+```{r overview individual QC, eval=FALSE}
 overview_individuals <- overviewPerIndividualQC(fail_individuals,
                                                 interactive=TRUE)
 ```
+```{r load overviewIndividualQC, echo=FALSE}
+par(mfrow=c(2,1), las=1)
+knitr::include_graphics("overviewQC.pdf")
+knitr::include_graphics("overviewAncestryQC.pdf")
+```
+
 
 
 ## Per-marker quality control
@@ -148,7 +157,8 @@ for the quality control checks and which check to conduct. Per default, all
 quality control checks will be conducted. `perMarkerQC` displays the results of
 the QC step in a multi-panel plot.
 ```{r marker QC, eval=FALSE}
-fail_markers <- perMarkerQC(qcdir=qcdir, alg=alg, path2plink=path2plink,
+fail_markers <- perMarkerQC(indir=indir, qcdir=qcdir, name=name,
+                            path2plink=path2plink,
                             verbose=TRUE, interactive=TRUE,
                             showPlinkOutput=FALSE)
 ```
@@ -177,7 +187,7 @@ removed from the dataset  with `cleanData`, resulting in the new dataset qcdir/d
 convenience, `cleanData` returns a list of all individuals in the study split
 into keep and remove individuals.
 ```{r clean data, eval=FALSE}
-Ids  <- cleanData(qcdir=qcdir, alg=alg, path2plink=path2plink,
+Ids  <- cleanData(indir=indir, qcdir=qcdir, name=name, path2plink=path2plink,
                             verbose=TRUE, showPlinkOutput=FALSE)
 ```
 
@@ -201,10 +211,14 @@ between PEDSEX and SNPSEX was detected, by SNPSEX == Sex, PEDSEX of these
 individuals can optionally be updated. `check_sex` depicts the X-chromosomal
 heterozygosity (SNPSEX) of the samples split by their (PEDSEX).
 
-```{r check sex, fig.height=3, fig.width=5, fig.align='center'}
-fail_sex <- check_sex(qcdir=qcdir, alg=alg, interactive=TRUE, verbose=TRUE,
-                      run.check_sex=FALSE)
+```{r check sex, eval=FALSE, fig.height=3, fig.width=5, fig.align='center'}
+fail_sex <- check_sex(indir=indir, qcdir=qcdir, name=name, interactive=TRUE,
+                      verbose=TRUE, path2plink=path2plink)
 ```
+```{r load checkSex, echo=FALSE, fig.align='center'}
+knitr::include_graphics("checkSex.pdf")
+```
+
 
 ## Individuals with outlying missing genotype and/or heterozygosity rates
 The identification of individuals with outlying missing genotype and/or
@@ -223,10 +237,12 @@ set thresholds and depicts the results as a scatter plot with the samples'
 missingness rates on x-axis and their heterozygosity rates on the y-axis.
 
 
-```{r check het miss, fig.height=3, fig.width=5, fig.align='center'}
-fail_het_imiss <- check_het_and_miss(qcdir=qcdir, alg=alg,
-                                     interactive=TRUE,
-                                     run.check_het_and_miss=FALSE)
+```{r check het miss, eval=FALSE, fig.height=3, fig.width=5, fig.align='center'}
+fail_het_imiss <- check_het_and_miss(indir=indir, qcdir=qcdir, name=name,
+                                     interactive=TRUE, path2plink=path2plink)
+```
+```{r load checkHetImiss, echo=FALSE, fig.align='center'}
+knitr::include_graphics("checkHetImiss.pdf")
 ```
 
 
@@ -245,9 +261,13 @@ complex family structures, the unrelated individuals per family are selected
 (e.g. in a parents-offspring trio, the offspring will be marked as fail, while 
 the parents will be kept in the analysis).
 
-```{r check related, fig.height=3, fig.width=5, fig.align='center'}
-exclude_relatedness <- check_relatedness(qcdir=qcdir, alg=alg, interactive=TRUE,
-                                         run.check_relatedness=FALSE)
+```{r check related, eval=FALSE, fig.height=3, fig.width=5, fig.align='center'}
+exclude_relatedness <- check_relatedness(indir=indir, qcdir=qcdir, name=name,
+                                         interactive=TRUE,
+                                         path2plink=path2plink)
+```
+```{r load checkRelatedness, echo=FALSE, fig.align='center'}
+knitr::include_graphics("checkRelatedness.pdf")
 ```
 
 
@@ -269,15 +289,18 @@ considered non-European. `check_ancestry` creates a scatter plot of PC1 versus
 PC2 color-coded for samples of the reference populations and the study
 population.
 
-```{r check ancestry, fig.height=3, fig.width=5, fig.align='center'}
-exclude_ancestry <- check_ancestry(qcdir=qcdir, alg=alg,
-                            refSamplesFile=paste(qcdir, "/HapMap_ID2Pop.txt",
+```{r check ancestry, eval=FALSE, fig.height=3, fig.width=5, fig.align='center'}
+exclude_ancestry <- check_ancestry(indir=indir, qcdir=qcdir, name=name,
+                            refSamplesFile=paste(indir, "/HapMap_ID2Pop.txt",
                                                  sep=""), 
-                            refColorsFile=paste(qcdir, "/HapMap_PopColors.txt",
+                            refColorsFile=paste(indir, "/HapMap_PopColors.txt",
                                                  sep=""),
                             prefixMergedDataset="data.HapMapIII",
-                            run.check_ancestry=FALSE,
+                            path2plink=path2plink, run.check_ancestry = FALSE,
                             interactive=TRUE)
+```
+```{r load ancestry, echo=FALSE, fig.align='center'}
+knitr::include_graphics("checkAncestry.pdf")
 ```
 
 ## Markers with excessive missingness rate
@@ -289,7 +312,8 @@ Identifying markers with high missingness rates is implemented in
 frequency for all variants in the individuals that passed the `perIndividualQC`.
 
 ```{r check snp missing, eval=FALSE}
-fail_snpmissing <- check_snp_missingness(qcdir=qcdir, alg=alg, interactive=TRUE,
+fail_snpmissing <- check_snp_missingness(indir=indir, qcdir=qcdir, name=name,
+                                         interactive=TRUE,
                                          path2plink=path2plink, 
                                          showPlinkOutput=FALSE)
 ```
@@ -309,7 +333,7 @@ individuals that passed the `perIndividualQC` and computes the deviation of the
 frequencies from Hardy-Weinberg equilibrium (HWE) by HWE exact test.
 
 ```{r check hwe, eval=FALSE}
-fail_hwe <- check_hwe(qcdir=qcdir, alg=alg, interactive=TRUE,
+fail_hwe <- check_hwe(indir=indir, qcdir=qcdir, name=name, interactive=TRUE,
                       path2plink=path2plink, showPlinkOutput=FALSE)
 ```
 ```{r load hwe, echo=FALSE, fig.align='center'}
@@ -326,7 +350,7 @@ It calculates the minor allele frequencies for all variants in the individuals
 that passed the `perIndividualQC`.
 
 ```{r check maf, eval=FALSE}
-fail_maf <- check_maf(qcdir=qcdir, alg=alg, interactive=TRUE,
+fail_maf <- check_maf(indir=indir, qcdir=qcdir, name=name, interactive=TRUE,
                       path2plink=path2plink, showPlinkOutput=FALSE)
 ```
 ```{r load  maf, echo=FALSE, fig.align='center'}
