--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -41,13 +41,18 @@ knitr::include_graphics("docs/qc.png")
 
 ## <i class="fa fa-rocket" aria-hidden="true"></i> Installation
 
-The current github version of **plinkQC**  is: 0.1.0 and can be
+The current github version of **plinkQC**  is: 0.1.1 and can be
 installed via
-```bash
+```{r github install, eval=FALSE}
 library(devtools)
 install_github("HannahVMeyer/plinkQC")
 ```
-**plinkQC** will soon be available on CRAN!
+
+The current CRAN version of **plinkQC**  is: 0.1.0 and can be
+installed via
+```{r install, eval=FALSE}
+install.packages("plinkQC")
+```
 
 A log of version changes can be found [here](news/index.html).
 
