--- a/README.Rmd
+++ b/README.Rmd
@@ -38,12 +38,16 @@ to retain as many individuals as possible in the study.
 
 ## <i class="fa fa-rocket" aria-hidden="true"></i> Installation
 
-The current github version of **plinkQC**  is: 0.1.0 and can be
+The current github version of **plinkQC**  is: 0.1.1 and can be
 installed via
-```{r ithub install, eval=FALSE}
+```{r github install, eval=FALSE}
 library(devtools)
 install_github("HannahVMeyer/plinkQC")
 ```
-**plinkQC** will soon be available on CRAN!
+The current CRAN version of **plinkQC**  is: 0.1.0 and can be
+installed via
+```{r  install, eval=FALSE}
+install.packages("plinkQC")
+```
 
 A log of version changes can be found [here](https://github.com/HannahVMeyer/plinkQC/blob/master/NEWS.md).
