--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/plinkQC)](https://cran.r-project.org/package=plinkQC)
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
-[![Downloads](http://cranlogs.r-pkg.org/badges/grand-total/plinkQC?color=red)](http://cran.rstudio.com/web/packages/plinkQC/index.html)
+[![Downloads](http://cranlogs.r-pkg.org/badges/grand-total/plinkQC?color=blue)](http://cran.rstudio.com/web/packages/plinkQC/index.html)
 
 ## <i class="fa fa-map" aria-hidden="true"></i> plinkQC
 
