--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(
 ```
 
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/plinkQC)](https://cran.r-project.org/package=plinkQC)
+[![Build Status](https://travis-ci.org/HannahVMeyer/plinkQC.svg?branch=master)](https://travis-ci.org/HannahVMeyer/plinkQC)
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
 [![Downloads](http://cranlogs.r-pkg.org/badges/grand-total/plinkQC?color=blue)](http://cran.rstudio.com/web/packages/plinkQC/index.html)
 
