--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -58,3 +58,6 @@ install.packages("plinkQC")
 
 A log of version changes can be found [here](news/index.html).
 
+## <i class="fa fa-pencil" aria-hidden="true"></i> Citation
+Meyer HV (2018) plinkQC: Genotype quality control in genetic association
+studies. doi:10.5281/zenodo.3373798
