--- a/vignettes/HapMap.Rmd
+++ b/vignettes/HapMap.Rmd
@@ -36,7 +36,7 @@ The following vignette shows the processing steps required to use samples of the
 HapMap study [@HapMap2005][@HapMap2007][@HapMap2010] as a reference dataset. 
 Using this reference, population structure down to large-scale continental
 ancestry can be detected. A step-by-step instruction on how to conduct this
-analysis is described in this [vignette](https://hannahvmeyer.github.io/plinkQC/articles/AncestryCheck.html).
+analysis is described in this [vignette](https://meyer-lab-cshl.github.io/plinkQC/articles/AncestryCheck.html).
 
 
 # Workflow
@@ -133,7 +133,7 @@ awk '{print $4, $3}' $refdir/HapMapIII_CGRCh37 > $refdir/HapMapIII_CGRCh37.pos
 ## Update the reference data
 We can now use PLINK to extract the mappable variants from the old build and
 update their position. After these steps, the HapMap III dataset can be used 
-for infering study ancestry as described in the corresponding [vignette](https://hannahvmeyer.github.io/plinkQC/articles/AncestryCheck.html).
+for infering study ancestry as described in the corresponding [vignette](https://meyer-lab-cshl.github.io/plinkQC/articles/AncestryCheck.html).
 ```{bash update annotation, eval=FALSE}
 plink --bfile $refdir/HapMapIII_NCBI36 \
     --extract $refdir/HapMapIII_CGRCh37.snps \
