--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -25,7 +25,7 @@ functions easily accessible from within R and allows for automatic evaluation
 of the results.
 
 **plinkQC** generates a per-individual and per-marker quality control report.
-A step-by-step guide on how to run these analyses can be found [here](https://hannahvmeyer.github.io/plinkQC/articles/plinkQC.html).
+A step-by-step guide on how to run these analyses can be found [here](https://meyer-lab-cshl.github.io/plinkQC/articles/plinkQC.html).
 
 Individuals and markers that fail the quality control can subsequently be
 removed with **plinkQC** to generate a new, clean dataset.
